force-app/main/default/objects/LOD_Service_Order__c/LOD_Service_Order__c.object-meta.xml
<CustomObject>
    <description>This object is used to store service orders that Libra OnDemand places with it&apos;s vendors</description>
    <label>LOD Service Order</label>
    <nameField>
        <displayFormat>LODSO-{000000}</displayFormat>
        <label>Service Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOD Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>