force-app/main/default/objects/LOD_Service_Order__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LOD Service Orders</relationshipLabel>
    <relationshipName>LOD_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>