force-app/main/default/objects/LOD_Service_Order__c/fields/Informatica_End_Points__c.field-meta.xml
<CustomField>
    <fullName>Informatica_End_Points__c</fullName>
    <label>Informatica End Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>