force-app/main/default/objects/LOD_Service_Order__c/fields/Informatica_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Informatica_Org_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Informatica Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>