force-app/main/default/objects/LOD_Service_Order__c/fields/LOD_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LOD_CreatedDate__c</fullName>
    <description>This is the date that the record was created in the Libra OnDemand Salesforce org</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date that the record was created in the Libra OnDemand Salesforce org</inlineHelpText>
    <label>LOD Created Date</label>
    <type>DateTime</type>
</CustomField>