force-app/main/default/objects/LOD_Service_Order__c/fields/LOD_Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>LOD_Salesforce_Id__c</fullName>
    <description>The Salesforce.com record Id from the LOD org</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The Salesforce.com record Id from the LOD org</inlineHelpText>
    <label>LOD Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>