force-app/main/default/objects/LOD_Service_Order__c/fields/Portal_Lite_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_Lite_User__c</fullName>
    <description>Write to only one object, read from all related objects</description>
    <inlineHelpText>Write to only one object, read from all related objects</inlineHelpText>
    <label>Portal Lite User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>