force-app/main/default/objects/LOD_Service_Order__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>