force-app/main/default/objects/LOD_Service_Order__c/fields/SFDC_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>SFDC_API_Calls__c</fullName>
    <label>SFDC API Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>