force-app/main/default/objects/LOD_Service_Order__c/fields/SFDC_Embedded_Users__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Embedded_Users__c</fullName>
    <description>Platform edition includes Libra + 1 App max.</description>
    <inlineHelpText>Platform edition includes Libra + 1 App max.</inlineHelpText>
    <label>SFDC Embedded Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>