force-app/main/default/objects/LOD_Service_Order__c/fields/SFDC_Platform_EE_Users__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Platform_EE_Users__c</fullName>
    <description>Platform with capabilities up to 10 Apps, 200 Objects.</description>
    <inlineHelpText>Platform with capabilities up to 10 Apps, 200 Objects.</inlineHelpText>
    <label>SFDC Platform EE Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>