force-app/main/default/objects/LOD_Service_Order__c/fields/SFDC_Platform_UE_Users__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Platform_UE_Users__c</fullName>
    <description>Platform with unlimited Apps, 2,000 objects.</description>
    <inlineHelpText>Platform with unlimited Apps, 2,000 objects.</inlineHelpText>
    <label>SFDC Platform UE Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>