force-app/main/default/objects/LOD_Service_Order__c/validationRules/Customer_Contact_Confirmation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Contact_Confirmation</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Do_Not_Send_Customer_Confirmation__c = false, isblank ( Customer_Contact__c ))</errorConditionFormula>
    <errorMessage>Please update Customer Contact information or check the &apos;Do Not Send Customer Confirmation&apos; field.</errorMessage>
</ValidationRule>