force-app/main/default/objects/LOD_Service_Order__c/validationRules/Service_Order_OrgId_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Order_OrgId_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
AND (Informatica_End_Points__c &lt;&gt; 0, isblank (Informatica_Org_Id__c)),
AND ( SDFC_Admin_Users__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c )),
AND ( SFDC_API_Calls__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c )),
AND ( SFDC_Embedded_Users__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c )),
AND ( SFDC_Extra_500Mb_Storage_Units__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c )),
AND ( SFDC_Platform_EE_Users__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c )),
AND ( SFDC_Platform_UE_Users__c &lt;&gt; 0, isblank ( SFDC_Org_Id__c ))
)</errorConditionFormula>
    <errorMessage>Please make sure that Org Id is entered.</errorMessage>
</ValidationRule>