force-app/main/default/objects/LOD_Service_Order__c/validationRules/Service_Order_Vendor_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Order_Vendor_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR (
AND (isblank( SFDC_Org_Id__c ) = false, isblank ( Informatica_Org_Id__c ) = false),
AND ( OR(TEXT (Vendor__c) = &quot;SFDC&quot;,TEXT (Vendor__c) = &quot;Vertical Response&quot;,TEXT (Vendor__c) = &quot;CRM Fusion&quot;,TEXT (Vendor__c) = &quot;LOD - AppExchange&quot;), isblank (SFDC_Org_Id__c)),
AND ( TEXT (Vendor__c) = &quot;Informatica&quot;, isblank (Informatica_Org_Id__c)),
AND ( TEXT (Vendor__c) &lt;&gt; &quot;Vertical Response&quot;, isblank ( VR_Email_Credits__c ) = false),
AND ( TEXT (Vendor__c) &lt;&gt; &quot;CRM Fusion&quot;, isblank (  DemandTools__c  ) = false),
AND ( TEXT (Vendor__c) &lt;&gt; &quot;LOD - AppExchange&quot;, isblank (  LOD_AppExchange_Users__c  ) = false),
AND ( TEXT (Vendor__c) &lt;&gt; &quot;SFDC&quot;, OR (isblank ( SDFC_Admin_Users__c ) = false,isblank (  SFDC_API_Calls__c  ) = false,isblank (  SFDC_Customer_Portal_Users__c  ) = false,isblank (  SFDC_Embedded_Users__c  ) = false,isblank (  SFDC_Extra_500Mb_Storage_Units__c  ) = false,isblank (  SFDC_Platform_EE_Users__c  ) = false, isblank ( SFDC_Platform_UE_Users__c ) = false))
)</errorConditionFormula>
    <errorMessage>Please verify Vendor and Org Id information. All SFDC, Vertical Response, CRM Fusion and AppExchange orders require an SFDC Org Id. All Informatica orders require an Informatica Org Id. Orders cannot be placed with more than one Vendor.</errorMessage>
</ValidationRule>